--- a/package.json
+++ b/package.json
@@ -6,15 +6,15 @@
   "scripts": {
     "start": "webpack-dev-server --open --config webpack.config.dev.js",
     "build": "webpack --config webpack.config.prod.js",
-    "eslint": "eslint \"src/\"",
-    "deploy": "npm run build && gh-pages -d dist"
+    "check": "eslint \"src/\"",
+    "deploy": "gh-pages -d dist -u helena.kolodko@gmail.com  -r https://github.com/helenakolodko/news-api.git"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/helenakolodko/news-api.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "helenakolodko",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/helenakolodko/news-api/issues"
