--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "devDependencies": {
     "@babel/core": "^7.16.0",
     "@babel/preset-env": "^7.16.0",
+    "@babel/preset-react": "^7.16.0",
     "babel-loader": "^8.2.3",
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.5.1",
@@ -37,6 +38,7 @@
     "webpack-dev-server": "^4.5.0"
   },
   "dependencies": {
-    "lodash": "^4.17.21"
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   }
 }
